Revision history for Dist-Build

{{$NEXT}}
          - Add compilation configurator
          - Only load Dist::Build::XS dependencies when necessary
          - Remove curdir and inc/ from automatic include paths in Dist::Build::XS

0.007     2024-07-20 15:19:09+02:00 Europe/Brussels
          - Properly depend on new ExtUtils::Builder::Compiler
          - Fix misspelling of extra_linker_flags
          - Add file argument to Dist::Build::XS
          - Add new_planner delegate

0.006     2024-07-15 21:22:15+02:00 Europe/Brussels
          - Make mkdir nodes non-phony
          - Provide better messages for most actions

0.005     2024-07-14 16:30:28+02:00 Europe/Brussels
          - Fix argument handling in mkdir
          - Add dry_run support to install deserializer

0.004     2024-07-13 13:49:39+02:00 Europe/Brussels
          - Sort test files
          - Add self delegate for DSL

0.003     2024-04-27 22:55:07+02:00 Europe/Brussels
          - Allow extra compiler and linker flags to be a string

0.002     2024-04-27 12:07:09+02:00 Europe/Brussels
          - Add dynamic prereqs
          - Depend on ExtUtils::HasCompiler 0.024

0.001     2024-04-26 12:49:11+02:00 Europe/Brussels
          Initial release to an unsuspecting world